--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,28 @@
     <title>Document</title>
     <link rel="stylesheet" href="stayles/style.css">
 </head>
+
 <body>
-    
+    <!-- this the header part -->
+    <header class="header">
+        <div class="banner">
+            <h1 class="banner-title">All Thinks Are</h1>
+            <h1 class="banner-title">Possible If You</h1>
+            <h1 class="banner-title">believe</h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum </p>
+            <p class="banner-description">available, but the majority have suffered alteration in some</p>
+            <p class="banner-description"> pform, by injected humour, or randomised words</p>
+            <button class="primary-text">Contact Us</button>
+        </div>
+
+    </header>
+
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
